CO-AUDIT: Full codebase audit — Audit.md, Scorecard.md, OpenAPI.yaml
- Generated CodeOps-Server-Audit.md (4,513 lines, 21 sections covering all 5 modules)
- Generated CodeOps-Server-Scorecard.md (Grade A, 93/104 = 89%)
- Generated CodeOps-Server-OpenAPI.yaml from live server (472 operations, 377 paths)
- Renamed openapi.yaml → CodeOps-Server-OpenAPI.yaml per audit template convention
- Fixed RelayDataSeeder bug: DM creation passed both user IDs in participantIds
  causing "Cannot create a direct conversation with yourself" on startup

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>